# LunAR-X

./: .gitignore  README.md  docker-compose.yaml  version.yaml
src/lx_autonomy/src/lx_external_interface/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_external_interface/include/lx_external_interface/: external_interface.hpp
src/lx_autonomy/src/lx_external_interface/src/: external_interface.cpp  external_interface_node.cpp
src/lx_autonomy/src/lx_packages/lx_bringup_autonomy/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_bringup_autonomy/config/: params.yaml
src/lx_autonomy/src/lx_packages/lx_bringup_autonomy/launch/: bringup_autonomy.launch.py  bringup_teleop.launch.py  param_server.launch.py
src/lx_autonomy/src/lx_packages/lx_bringup_autonomy/src/: lx_param_server.cpp  lx_param_server_node.cpp  param_server.cpp
src/lx_autonomy/src/lx_packages/lx_description/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_description/launch/: description.launch.py
src/lx_autonomy/src/lx_packages/lx_description/meshes/: brk.dae  drum.dae  front_plate.dae  lift_assembly.dae
src/lx_autonomy/src/lx_packages/lx_description/src/: joint_viz.cpp  joint_viz_node.cpp
src/lx_autonomy/src/lx_packages/lx_description/urdf/: decorations.urdf.xacro  husky_macro.urdf.xacro  lunarx.urdf.xacro  wheel.urdf.xacro
src/lx_autonomy/src/lx_packages/lx_diagnostics/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_diagnostics/launch/: diagnostics.launch.py
src/lx_autonomy/src/lx_packages/lx_diagnostics/src/: diagnostics.cpp  diagnostics_node.cpp
src/lx_autonomy/src/lx_packages/lx_external_interface/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_external_interface/launch/: external_interface.launch.py
src/lx_autonomy/src/lx_packages/lx_external_interface/src/: external_interface.cpp  goal_handler.cpp  goal_handler_node.cpp
src/lx_autonomy/src/lx_packages/lx_library/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_library/src/: exceptions.cpp  lx_utils.cpp  subtask.cpp  task.cpp
src/lx_autonomy/src/lx_packages/lx_localization/: CMakeLists.txt  README.md  package.xml
src/lx_autonomy/src/lx_packages/lx_localization/config/: localization.rviz
src/lx_autonomy/src/lx_packages/lx_localization/launch/: localization.launch.py  lx_ekf.launch.py  rviz_config.rviz
src/lx_autonomy/src/lx_packages/lx_localization/params/: lx_localization_params.yaml  lx_ts_localization_params.yaml
src/lx_autonomy/src/lx_packages/lx_localization/src/: custom_localization.cpp  husky_goal_relay.cpp  localization.cpp  localization_node.cpp  remap_husky_odom.cpp  remap_msgs_localization.cpp
src/lx_autonomy/src/lx_packages/lx_mapping/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_mapping/launch/: mapping.launch.py  rviz_config.rviz
src/lx_autonomy/src/lx_packages/lx_mapping/src/: bayes_filter.cpp  berm_evaluation.cpp  berm_evaluation_node.cpp  merge_map copy.cpp  merge_map.cpp  merge_map_node.cpp  pc_handler.cpp  pc_handler_node.cpp  pcl_relay.cpp  pcl_relay_node.cpp  visual_servoing.cpp  visual_servoing_node.cpp  world_model.cpp  world_model_node.cpp
src/lx_autonomy/src/lx_packages/lx_msgs/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_msgs/action/: AutoDig.action  AutoDump.action  AutoNav.action  CalibrateImu.action  Operation.action  PlanTask.action
src/lx_autonomy/src/lx_packages/lx_msgs/msg/: BermConfig.msg  BermMetrics.msg  BermNode.msg  BermProgress.msg  NodeDiagnostics.msg  PlannedTask.msg  RoverCommand.msg  ToolInfo.msg
src/lx_autonomy/src/lx_packages/lx_msgs/srv/: BermMetrics.srv  BermProgressEval.srv  BermService.srv  ComputeBermMetrics.srv  Map.srv  PclGroundHeight.srv  Plan.srv  RequestRoverService.srv  Switch.srv  UserInputRecord.srv  ZoneService.srv
src/lx_autonomy/src/lx_packages/lx_operation/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_packages/lx_operation/config/: params.yaml
src/lx_autonomy/src/lx_packages/lx_operation/launch/: operation.launch.py
src/lx_autonomy/src/lx_packages/lx_operation/rviz/: autonav.rviz
src/lx_autonomy/src/lx_packages/lx_operation/src/: auto_dig_handler.cpp  auto_dig_handler_node.cpp  auto_dump_handler.cpp  auto_dump_handler_node.cpp  auto_nav_handler.cpp  auto_nav_handler_node.cpp  autodig.cpp  autodig_node.cpp  autodump.cpp  autodump_node.cpp  autonav.cpp  operations_handler.cpp  operations_handler_node.cpp  rover_navigate.cpp  rover_navigate_node.cpp
src/lx_autonomy/src/lx_packages/lx_planning/: CMakeLists.txt  README.md  package.xml
src/lx_autonomy/src/lx_packages/lx_planning/animation/: animate copy.py  animate.py  output.csv  planner.py
src/lx_autonomy/src/lx_packages/lx_planning/launch/: planning.launch.py
src/lx_autonomy/src/lx_packages/lx_planning/maps/: big_circle.yaml  big_circle_obs.yaml  env_3_10.yaml  env_3_16.yaml  env_3_18.yaml  env_3_19.yaml  env_3_4.yaml  env_4_19.yaml  env_4_23.yaml  env_5_10.yaml  env_5_16.yaml  env_5_24.yaml  env_5_31.yaml  env_5_4.yaml  env_X.yaml  half_circle.yaml  half_circle_1.yaml  half_circle_2.yaml  moonyard.yaml  semi_circle.yaml  small_circle.yaml  test.yaml
src/lx_autonomy/src/lx_packages/lx_planning/outputs/: OUTPUTS.md
src/lx_autonomy/src/lx_packages/lx_planning/paths/: path_0.txt  path_1.txt  path_3.txt  path_4.txt  path_5.txt  path_6.txt
src/lx_autonomy/src/lx_packages/lx_planning/scripts/: generate_circle_tests.py  generate_tests.py
src/lx_autonomy/src/lx_packages/lx_planning/src/: call_task_optimizer.py  gui_example.cpp  node_se2.cpp  planner_action_client copy.cpp  planner_action_client.cpp  simple_example.cpp  (+8 more)
src/lx_autonomy/src/lx_packages/lx_rover_command/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_rover_command/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_rover_command/launch/: command_mux.launch.py
src/lx_autonomy/src/lx_rover_command/src/: command_mux.cpp  command_mux_node.cpp
src/lx_autonomy/src/lx_utils/: CMakeLists.txt  package.xml
src/lx_autonomy/src/lx_utils/src/: lx_utils.cpp  subtask.cpp  task.cpp
(+188 files in other folders)
