<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lx_external_interface</name>
  <version>0.0.0</version>
  <description>LunAR-X Project - External Interface package for the rover's onboard compute</description>
  <maintainer email="dhruv.tya@gmail.com">Dhruv Tyagi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>lx_msgs</depend>
  <depend>lx_library</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
