<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lx_mapping</name>
  <version>0.0.0</version>
  <description>LunAR-X Project - Mapping package</description>
  <maintainer email="anishsenathi@gmail.com">anish</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>example_interfaces</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>  
  <test_depend>lx_msgs</test_depend>
  <!-- <test_depend>rosidl_default_generators</test_depend>
  <test_depend>rosidl_default_runtime</test_depend>
  <test_depend>rosidl_typesupport_cpp</test_depend>
  <test_depend>rosidl_typesupport_fastrtps_cpp</test_depend>
  <test_depend>rosidl_typesupport_introspection_cpp</test_depend> -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
