<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lx_planning</name>
  <version>0.0.0</version>
  <description>LunAR-X Project - Planning package for the autonomy planning subsystem</description>
  <maintainer email="dhruv.tya@gmail.com">Dhruv Tyagi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>lx_msgs</depend>
  <depend>lx_library</depend>
  <depend>nav2_msgs</depend>
  <depend>rclpy</depend>
  <depend>ompl</depend>
  <depend>OpenCV</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
