<?xml version="1.0"?>
<package format="2">
  <name>lx_arduino_handler</name>
  <version>0.0.0</version>
  <description>LunAR-X Project - The arduino_node package to interface with low-level hardware</description>
  <maintainer email="vib2810@gmail.com">Vibhakar Mohta</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
